--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,15 @@
     android:layout_gravity="center_vertical"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/result_text"
+    <ImageView
+        android:id="@+id/dice_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textSize="30sp"
-        android:text="@string/dice_rolled_label" />
+        android:src="@drawable/empty_dice"
+        tools:src="@drawable/dice_1"
+        android:contentDescription="@string/dice_image_description" />
+
     <Button
         android:id="@+id/roll_button"
         android:layout_width="wrap_content"
